css bug squashing

--- a/src/index.css
+++ b/src/index.css
@@ -198,6 +198,7 @@ button {
     .currentList,
     .listToppings {
         width: 100%;
+        margin: 0 auto;
     }
   }
   
@@ -208,6 +209,7 @@ button {
     .currentList,
     .listToppings {
         max-width: 300px;
+        margin: 0 auto;
     }
   }
   
@@ -218,6 +220,7 @@ button {
     .currentList,
     .listToppings {
     max-width: 400px;
+    margin: 0 auto;
     }
   }
   
